# Gerenciamento-academico

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DESENVOLVIMENTO.md  Dockerfile  FLUXOGRAMA.md  README.md  REFINACOES.md  RESUMO.md  SEGURANCA.md  START.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/database/: __init__.py  connection.py  seed.py
app/domain/: __init__.py  models.py
app/router/: __init__.py  aluno_router.py  disciplina_router.py  matricula_router.py  nota_router.py  professor_router.py  relatorio_router.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  aluno_service.py  disciplina_service.py  matricula_service.py  nota_service.py  professor_service.py  relatorio_service.py
tests/: test_endpoints.py
