[project]
name = "academico-api"
version = "1.0.0"
description = "API REST de gerenciamento acadêmico"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "python-multipart==0.0.6",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pydantic[email]",
    "alembic==1.12.1",
]
